// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneNumberInput should render correctly 1`] = `
<div
  class="v-input v-text-field v-input--is-label-active v-input--is-dirty theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should restore saved value 1`] = `
<div
  class="v-input v-text-field v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should save value 1`] = `
<div
  class="v-input v-text-field v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show country code prefix hint 1`] = `
<div
  class="v-input v-text-field v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        >
          <div
            class="v-messages__message message-transition-enter message-transition-enter-active"
          >
            It is recommended to add a country prefix, e.g. +49.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show country code prefix hint 2`] = `
<div
  class="v-input v-text-field v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <i
          aria-hidden="true"
          class="v-icon v-icon--link material-icons theme--light"
        >
          clear
        </i>
         
        <i
          aria-hidden="true"
          class="v-icon v-icon--link material-icons theme--light"
        >
          save
        </i>
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <div
          class="v-messages__wrapper"
        >
          <div
            class="v-messages__message message-transition-leave message-transition-leave-active"
          >
            It is recommended to add a country prefix, e.g. +49.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show error and hide save button 1`] = `
<div
  class="v-input v-text-field v-input--has-state v-input--is-label-active v-input--is-dirty theme--light error--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <i
          aria-hidden="true"
          class="v-icon v-icon--link material-icons theme--light"
        >
          clear
        </i>
         
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <div
          class="v-messages__wrapper"
        >
          <div
            class="v-messages__message message-transition-enter message-transition-enter-active"
          >
            Invalid phone number.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show save and restore button if changes are made 1`] = `
<div
  class="v-input v-text-field v-input--is-label-active v-input--is-dirty theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show save and restore button if changes are made 2`] = `
<div
  class="v-input v-text-field v-input--is-label-active v-input--is-dirty theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <i
          aria-hidden="true"
          class="v-icon v-icon--link material-icons theme--light"
        >
          clear
        </i>
         
        <i
          aria-hidden="true"
          class="v-icon v-icon--link material-icons theme--light"
        >
          save
        </i>
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show save and restore button if input is cleared 1`] = `
<div
  class="v-input v-text-field v-input--is-label-active v-input--is-dirty theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show save and restore button if input is cleared 2`] = `
<div
  class="v-input v-text-field theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <i
          aria-hidden="true"
          class="v-icon v-icon--link material-icons theme--light"
        >
          clear
        </i>
         
        <i
          aria-hidden="true"
          class="v-icon v-icon--link material-icons theme--light"
        >
          save
        </i>
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;
